fixed About alignment issues.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2219,7 +2219,7 @@
 
       h3.about-me-header {
         font-style: italic;
-        text-align: left;
+        text-align: center;
       }
 
       div.about-me {
